--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@ ul {
   margin: auto;
 }
 
+.divider-light {
+  fill: var(--gray-color);
+}
+
+.divider-dark {
+  fill: var(--black-color);
+}
 .social-media-link {
   color: var(--black-color);
   font-size: 11px;
@@ -112,6 +119,7 @@ ul {
 .subtitle-container {
   display: flex;
   gap: 20px;
+  align-items: center;
 }
 
 .subtitle {
@@ -167,8 +175,11 @@ ul {
   margin-top: 30px;
 }
 
-.contact {
-  /* TODO: replace with image backround */
-  background-color: var(--black-color);
-  color: var(--white-color);
+.contact-address {
+  color: #9da4bd;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 166.667%; /* 166.667% */
+  letter-spacing: 0.36px;
 }
