--- a/css/hero-styles.css
+++ b/css/hero-styles.css
@@ -11,8 +11,44 @@
   justify-content: space-between;
 }
 
+.hero-container {
+  background-color: var(--black-color);
+  /* background-image: url("../images/hero-slider.jpg"); */
+  background-size: cover;
+  color: var(--white-color);
+  flex-grow: 1;
+
+  position: relative;
+}
+
+.hero-carousel {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+.hero-carousel-item {
+  /* clasa specifica pt imagine ca sa o punem in pagina -imaginea hero prima */
+  /* noi vrem sa ajunga imaginea asta ca fundal */
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* ca sa arate bine, joaca-te cu ea sa vezi */
+  display: block; /* pt ca exista un ff mic spatiu intre cele 3 imagini sliders */
+}
+
 .hero-social-media {
   margin-bottom: 40px;
+}
+
+.hero-content-container {
+  position: relative;
+  z-index: 1;
+  padding: 40px 55px 40px 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .hero-control-buttons {
@@ -41,18 +77,6 @@
 
 .hero-social-media-element:first-child {
   margin-bottom: 40px;
-}
-
-.hero-container {
-  background-color: var(--black-color);
-  background-image: url("../images/hero-slider.jpg");
-  background-size: cover;
-  color: var(--white-color);
-  flex-grow: 1;
-  padding: 40px 55px 40px 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .hero-navbar {
