--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,19 @@ ul {
 
 /* Classes */
 
+.modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  z-index: 10;
+  position: fixed;
+}
+
+.is-hidden {
+  visibility: hidden;
+}
+
 .container {
   width: 1280px;
   margin: auto;
