--- a/css/hero-styles.css
+++ b/css/hero-styles.css
@@ -35,6 +35,8 @@
   height: 100%;
   object-fit: cover; /* ca sa arate bine, joaca-te cu ea sa vezi */
   display: block; /* pt ca exista un ff mic spatiu intre cele 3 imagini sliders */
+
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-social-media {
@@ -75,8 +77,17 @@
   color: var(--white-color);
 }
 
+.hero-social-media-element {
+  transform: rotate(-90deg);
+}
+
 .hero-social-media-element:first-child {
-  margin-bottom: 40px;
+  margin-bottom: 80px;
+}
+
+.hero-divider {
+  margin-top: 40px;
+  transform: rotate(-90deg);
 }
 
 .hero-navbar {
