--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@
 * {
   margin: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--text-font-family);
 }
@@ -30,6 +35,17 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+
+/* .nav-link-active::after {
+  content: ""; /* luate versus tema vezi ce se intampla pe about unde trebuie sa ai o linie mov dedesubt */
+  width: 100%;
+  height: 4px;
+  background-color: #ff6c00;
+  display: block;
+
+  position: relative; /*pozitionarea acelei linii unde sa vina dedesubt- joaca-te si vezi about*/
+  top: 10px;
+} */
 
 /* Classes */
 
