--- a/css/footer-styles.css
+++ b/css/footer-styles.css
@@ -2,4 +2,25 @@
   /* clasa mare pe footer pt a pune una dupa alta copyright si socials media */
   display: flex;
   justify-content: space-between;
+  padding: 55px;
+}
+
+.footer-copy {
+  color: #9da4bd;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 2.2px;
+}
+
+.footer-social-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.footer-social {
+  display: flex;
+  gap: 40px;
 }
