--- a/css/about-styles.css
+++ b/css/about-styles.css
@@ -1,9 +1,11 @@
 .about {
-  height: 705px;
-  padding: 130px 55px;
+  padding: var(--padding-vertical-global) var(--padding-horizontal-global);
   /* display: flex; /pt ca elementele merg de la stanga la dreapta */
-  display: flex;
   gap: 30px;
+}
+
+.about-image {
+  display: none;
 }
 
 .about-content {
@@ -16,9 +18,9 @@
 
 .about-description-1 {
   color: var(--content-color);
-  font-size: 18px;
-  line-height: 166.667%;
-  letter-spacing: 0.36px;
+  font-size: 16px;
+  line-height: 162.5%;
+  letter-spacing: 0.32px;
 }
 
 .about-description-2 {
@@ -31,4 +33,19 @@
 .about-book-service-button {
   align-self: flex-start;
   margin-top: calc(40px - 20px);
+}
+
+@media screen and (width >= 768px) {
+  .about-image {
+    display: block;
+    width: 330px;
+    height: 235px;
+  }
+}
+@media screen and (width >= 1158px) {
+  .about-description-1 {
+    font-size: 18px;
+    line-height: 166.667%;
+    letter-spacing: 0.36px;
+  }
 }
