--- a/css/barbers-styles.css
+++ b/css/barbers-styles.css
@@ -1,7 +1,7 @@
 .barbers {
   background-color: #f7f7f7;
-  height: 890px; /* height din pagina mare container */
-  padding: 130px 55px; /* marginile la pagina mare */
+  /* height: 890px; height din pagina mare container - CA SA FIE OK PT TEL TREBUIE SCOS DE TOT HEIGHTUL*/
+  padding: var(--padding-vertical-global) var(--padding-horizontal-global);
 }
 
 .barbers-head {
@@ -35,11 +35,15 @@
 }
 
 .barbers-list {
-  display: flex; /* sa puna imaginile una dupa alta */
-  gap: 30px; /* distanta intre imagini cele 3 e de 30px */
+  display: flex; /*sa puna imaginile una dupa alta */
+  flex-direction: column;
+  gap: 64px; /* distanta intre imagini cele 3 e de 30px */
+  justify-content: center;
+  align-items: center;
 }
 
 .barbers-list-item {
+  width: fit-content;
 }
 
 .barbers-list-item-title {
@@ -63,4 +67,11 @@
   line-height: normal;
   letter-spacing: 0.28px;
   margin-top: 8px;
+}
+
+@media screen and (width >= 1158px) {
+  .barbers-list {
+    flex-direction: row;
+    gap: 30px; /* distanta intre imagini cele 3 e de 30px */
+  }
 }
