--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -1,13 +1,13 @@
 .contact-container {
-  display: flex; /* ca sa le pun una dupa alta cele 2 book service si celalalt*/
+  /* display: flex; ca sa le pun una dupa alta cele 2 book service si celalalt */
 }
 
 .contact-book-service {
   background-color: #191c26;
-  width: 55%; /* s-a luat tot containerul de 1280 si s-a facut 625 width
+  /* width: 55%; /* s-a luat tot containerul de 1280 si s-a facut 625 width
   de la book a service impartit la 1280 width cat are tot containerul
   mare => 48% , el a luat 45% deci ar fi 55% */
-  padding: 130px 40px 0 55px;
+  padding: var(--padding-vertical-global) var(--padding-horizontal-global);
 }
 
 .contact-form {
@@ -58,7 +58,7 @@
 }
 
 .contact {
-  width: 45%; /* deci diferenta de la 65 celalat container book a service */
+  /* width: 45%; deci diferenta de la 65 celalat container book a service */
   --price-list-bg-color: rgba(25, 28, 38, 0.9);
   background-image: linear-gradient(
       var(--price-list-bg-color),
@@ -68,9 +68,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: var(--white-color);
-  height: 644px;
+  /* height: 644px; */
 
-  padding: 130px 100px; /* marginile maxime pt contacts container */
+  padding: var(--padding-vertical-global) var(--padding-horizontal-global);
 }
 
 .contact-address {
