--- a/css/portfolio-styles.css
+++ b/css/portfolio-styles.css
@@ -1,9 +1,9 @@
 .portfolio {
-  padding: 130px 55px; /* aici portfolio pus pe sectiune ca si clasa da distantele in tot containerul max sus,dreapta,jos,stanga*/
+  padding: var(--padding-vertical-global) var(--padding-horizontal-global);
 }
 
 .portfolio-images {
-  display: flex; /* aici aranjam pozele sa fie una dupa alta si gapul dintre ele, clasa fiind pusa pe ul ce contine toate pozele */
+  /* display: flex; aici aranjam pozele sa fie una dupa alta si gapul dintre ele, clasa fiind pusa pe ul ce contine toate pozele */
   gap: 30px;
 }
 
