--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
   --white-color: #ffffff;
   --gray-color: rgba(157, 164, 189, 0.6);
 
+  --padding-vertical-global: 84px;
+  --padding-horitzontal-global: 31px;
+
   --content-color: #555;
   --text-font-family: "Open Sans", sans-serif;
   --header-font-family: "Raleway", sans-serif;
@@ -36,8 +39,8 @@ ul {
   padding: 0;
 }
 
-/* .nav-link-active::after {
-  content: ""; /* luate versus tema vezi ce se intampla pe about unde trebuie sa ai o linie mov dedesubt */
+.nav-link-active::after {
+  content: ""; /*luate versus tema vezi ce se intampla pe about unde trebuie sa ai o linie mov dedesubt */
   width: 100%;
   height: 4px;
   background-color: #ff6c00;
@@ -45,7 +48,8 @@ ul {
 
   position: relative; /*pozitionarea acelei linii unde sa vina dedesubt- joaca-te si vezi about*/
   top: 10px;
-} */
+}
+*/
 
 /* Classes */
 
@@ -171,7 +175,7 @@ ul {
 
 .header {
   font-family: var(--header-font-family);
-  font-size: 42px;
+  font-size: 28px;
   font-style: normal;
   line-height: normal;
   letter-spacing: 2.1px;
@@ -192,4 +196,22 @@ ul {
   font-weight: 400;
   line-height: 166.667%; /* 166.667% */
   letter-spacing: 0.36px;
+}
+
+@media screen and (width >= 768px) {
+  :root {
+    --padding-vertical-global: 100px;
+    --padding-horitzontal-global: 39px;
+  }
+}
+
+@media screen and (width >= 1158px) {
+  :root {
+    --padding-vertical-global: 130px;
+    --padding-horitzontal-global: 55px;
+  }
+  .header {
+    font-size: 42px;
+    letter-spacing: 2.1px;
+  }
 }
